メタステ公開

--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -30,7 +30,21 @@
   <div id="main-contents" class="contents">
     <img class="metastable-cover" id="cover" src="../img/ms3_title0.png"/>
     <div id="main-metastable-index" v-component="metastable-index"></div>
+    
+    <table class="appendix">
+      <tbody class="appendix">
+        <tr>
+         <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
+         <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
+         <td><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
+        </tr>
+      </tbody>
+    </table>
+    
   </div>
+
+  <div class="back"><a href="../novel.html#metastable3">戻る</div>
+  
 </body>
 </html>
 
