§1のタイトルを変更

--- a/metastable3/2-05.html
+++ b/metastable3/2-05.html
@@ -52,6 +52,10 @@
 「考える。考えるよ……その内……」
 「もう！　そんなんじゃいつまでたっても決められないよ！」
 　あははという笑い声が教室に小さく響いた。
+　ただ単に結果として上手く行っただけかもしれない。新田さんの親にたまたま理解があったからこそ官女はこうして笑えているだけかもしれない。
+ だが、それでもいいじゃないか。
+　新田さんの笑顔にはそう思えるだけの暖かさがあった。
+
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
