【公開前改定】§2推敲

--- a/metastable3/2-01.html
+++ b/metastable3/2-01.html
@@ -63,12 +63,12 @@
 　そしてホームルームが終わり、学校が終わる。
 　藤白は身支度を整えると、学校指定のブラウンのメッセンジャーバッグを担ぎ、机の横に掛けていた人民帽を被って教室の外に出た。目指すは希海の居る３－６の教室。廊下の人混みを早足で切り抜け、階段をひとつのぼって三階へ上がる。廊下を少し歩いて目的の教室の前に来ると、ちょうどホームルームが終わったばかりのようだった。
 （えっと……先輩は……っと）
-　教室からぞろぞろと溢れてくる生徒の中に希海の姿を探す藤白。ほどなくして見覚えのある明るい髪色の少女が教室から出てくるのが見えた。
+　教室からぞろぞろと溢れてくる生徒の中に希海の姿を探す藤白。ほどなくして見覚えのある明るい髪色の少女が教室から出てきた。
 「先輩！」
 「あれ？　藤白くんどうしたの？　今日は<ruby>精神医療センター<rp>《</rp><rt>あっち</rt><rp>》</rp></ruby>休みだよね？」
-　そう言って少し不思議そうににっこりと笑ってみせる希海。その笑顔に藤白の心臓がどくんと跳ねる。
+　そう言って少し不思議そうににっこりと笑ってみせる希海。
 「え、えっと、実は……」
-　改めて誘おうとすると、気恥ずかしさが立ってしまう。藤白は希海の目を直視できず、視線を下に落とす。
+　改めて誘おうとすると、気恥ずかしさが立ってしまう。藤白は希海の目を直視できず、視線を下に落とした。
 「なになに？　なんか用事？」
 「その……先輩に勉強教えてもらいたいな……って思って」
 　藤白の視線の先にあるのは希海の靴。青いキャンバス地が印象的な、ボーイッシュなスニーカーである。
@@ -99,7 +99,7 @@
 「お前はもうちょっと遠慮しろ」
 　一方の紀佳は慣れた様子だった。彼女は藤白の幼馴染だし、何度かこの部屋に来たこともあるのだろうと希海は推測する。
 「あれ？　今日はお母さんいないの？」と紀佳。
-「ああ、なんか今日は昔の友達と遊びに行ってるんだってさ」
+「ああ、なんか昔の友達と遊びに行ってるんだってさ」
 「ふ～ん……」
 「それより先輩、そう固くならずさっさと靴脱いで上がってくれていいんだぜ？」
 「う、うんごめん。友達の家に行くなんて久しぶりだから少し緊張しちゃって」
@@ -114,7 +114,8 @@
 「まあくつろいでくれよ。じゃあ俺はちょっと飲み物でも入れてくるけど……」
 　藤白はそう言うと紀佳をキッと睨み、
 「いいか、絶対に……。絶っ対に、余計なことするなよ」
-「余計なことって？」と紀佳が振り返る。
+「余計なことって？」
+　紀佳が振り返る。
 「紀佳がいつもやってるようなことだ。俺の部屋を勝手に漁ったり、引き出しやクローゼットを勝手に開けたり、絶っっっ対にするなよ……！」
 　そう厳命する藤白の顔は真剣そのものだが、対する紀佳はヘラヘラとしている。
 「大丈夫大丈夫。青山さんがいるのにそんなことするわけないでしょ」
@@ -134,7 +135,7 @@
 　そう言って、ガサガサと部屋中を漁り始めたのだった。
 「ちょ、ちょ！　まずいって！　勝手に触ったら！」
 「んーっと、多分、カズくんのことだからこの辺に…………あった」
-　そしてベッドの下から手を引き上げた紀佳の手には一冊のA4サイズの雑誌が握られていた。
+　そしてベッドの下から手を引き上げた紀佳の手には一冊のＡ４サイズの雑誌が握られていた。
 「ふ、古江さん！」
 　何故か小声になってしまう希海。紀佳はそんな焦る希海を意地悪そうに見つめ、手に持っていた本を差し出す。
 「はい、青山さん」
