--- a/metastable3/2-02.html
+++ b/metastable3/2-02.html
@@ -37,7 +37,7 @@
 「こ、これ……新田さん！？」
 「ああ、そういえば患者と藤白と同じクラスだったな」
 　資料の上部には見知った顔の写真と共に『新田翔子』という名前が記されていた。
-「患者の名前は新田翔子。お前らと同じ党立真揺高校に通う二年生だ。身長百五十八センチ、体重50キロ、趣味は絵を描くこと……」
+「患者の名前は新田翔子。お前らと同じ党立真揺高校に通う二年生だ。身長１５８センチ、体重５０キロ、趣味は絵を描くこと……」
 「閉律症を患った原因は？」と希海。
 「母親の証言によると、自室で勉強中に閉律症を患ったらしい。帰宅時に進路のことで親と口論したということだから、精神の免疫が弱った原因はそれだろうな」
 　昼間の新田さんの言葉が藤白の脳裏に浮かぶ。テストの点数を心配していた彼女。難関大の医学部へ進学しろと親からプレッシャーを掛けられていると言っていた。
@@ -82,7 +82,7 @@
 「一番最初にルーミングしたときの格好っていうのは自然と脳に刻まれるの。もちろん、意識すれば別の格好で精神空間に出られるんだけどね。でも、それには訓練が必要になってくる。だから最初は制服でルーミングしたってワケ。藤白くんだってパジャマ姿で向こうに行くなんて嫌でしょ？」
 　まっ、豆知識だけどねと付け加える希海。
 「なるほどな。じゃあ次は俺が着替える番か」
-　そして藤白は二人と入れ替わる形で部屋に入り、着替えを済ませた。三人は各々のベッドに横になり、首と頭部にSQUIDを装着する。
+　そして藤白は二人と入れ替わる形で部屋に入り、着替えを済ませた。三人は各々のベッドに横になり、首と頭部にＳＱＵＩＤを装着する。
 「みんな暗幕は閉めた？　電気消すね」
 　希海がそう言ってリモコンを持った手をかざすと、あたりが暗闇に包まれる。
 「…………」
@@ -117,7 +117,7 @@
 「患者のクラス。そこに居なかったら、患者が一年の頃に在籍していたクラスの教室。つまり……」
 「２－６ってことか」
 「そういうこと。じゃ、いきましょっか」
-　そうして三人は教室を出て学校の廊下を歩き出す。窓の外にあるのは五月の晴れた空。中央地区センターのタワーマンションがはっきり見えるほどに澄み切った空気が太陽の光を受けて金色に輝いている。
+　そうして三人は教室を出て学校の廊下を歩き出す。窓の外にあるのは五月の晴れた空。中央地区センターのタワーマンションがはっきり見えるほどに澄み切った空気と、温かい太陽の光がまさに五月の空といった感じだ。
 「いい天気ね」
 　そうこぼしたのは紀佳。
 「ああ、こうして学校の中を歩いていてもここが他人の精神の中だなんてにわかには信じられないよ」
@@ -136,7 +136,7 @@
 　だが、藤白たちが覗いた教室の中はもぬけの殻だった。
 　その後、一年生のクラスを周ってみたものの、どこにも目的の少女の姿はない。
 「おっかしいなあ～」
-　希海は意表を突かれたような様子で頬をぽりぽりと掻いてみせる。
+　希海は少し困った様子で頬をぽりぽりと掻いてみせる。
 「私たちが学校に出てきたってことは、探している患者が学校にいるってことは間違いないのよね。だったら……」
 「別のクラスとか？」
 「もしくは特別教室ね」
