--- a/metastable3/2-03.html
+++ b/metastable3/2-03.html
@@ -19,7 +19,7 @@
 　そう言って藤白が指をさした先……。新田さんの肩口には白い四角形の板が、重力に逆らってふわふわと浮かんでいる。
 「あれは……<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>ね」
 「あれがそうなのか」
-　講習で習ったことを思い出す。<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>とは、文字通り患者の精神空間を支える核であり、万が一戦いになった場合はこの<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>を破壊することが、藤白たちの勝利条件となる。
+　講習で聞いたことを思い出す。<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>とは、文字通り患者の精神空間を支える核であり、万が一戦いになった場合はこの<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>を破壊することが、藤白たちの勝利条件となる。
 「それにしてもあの<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>何かな？　薄暗くてよく見えない」
 「絵を描いたりするキャンバスじゃない？」
 「あー。言われてみればそんな感じに見えるわね」
@@ -28,7 +28,7 @@
 「うん」
 「わかった」
 「よし、じゃあ……入るわよ」
-　ガラリ。希海が扉を開け中に入った。その様子を藤白は息を呑んで見守る。教室の中は電気が点いておらず薄暗い。そんな灰色の空間に立ち並ぶ机と椅子、壁にかけられた生徒作品の絵画。少しだけ不気味だった。
+　ガラリ。希海が扉を開け中に入った。その様子を藤白は息を呑んで見守る。教室の中は電気が点いておらず薄暗い。そんな灰色の空間に立ち並ぶ机と椅子。壁にかけられた生徒作の絵画が少しだけ不気味だった。
 「だ、誰！？」
 　つぶらな瞳が希海の姿を捉えた。少女がそちらを振り返るとそれに呼応するかのように<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が弧を描いて公転する。
 「あっ、大丈夫怪しい者じゃないよ。私は党立精神医療センターの人間で、あなたを治療しに来たの」
@@ -44,7 +44,7 @@
 「…………」
 　希海は押し黙る。
 「私は……帰らない。もう、あんな家に帰りたくない……！」
-　少女が不意に立ち上がった。その手には一本の鋭利なペインティングナイフが握られている。通常ペインティングナイフで人を刺すことは不可能だが、新田さんの手に握られているそれは通常のものよりもずっと鋭利な輝きを放っている。窓から差し込む一迅の光を受けてきらめくそれは、人の肌など容易に切り裂くことができそうだった。
+　少女が不意に立ち上がった。その手には一本の鋭利なペインティングナイフが握られている。通常ペインティングナイフで人を刺すことは不可能だが、新田さんの手に握られているそれは通常のものよりもずっと鋭利な輝きを放っている。これも夢の中だからなのだろうか。窓から差し込む一迅の光を受けてきらめくそれは、人の肌など容易に切り裂くことができそうだった。
 「せ、先輩っ！」
 　思わずそう叫んだ藤白。だが対する希海は至って冷静である。
 「そのナイフで私を刺すの？」
@@ -88,7 +88,7 @@
 「……無駄よ」
 　そう吐き捨てるように言う希海。そうだ。その手に持ったナイフでは希海に傷一つ付けれっこないのはさっきの戦いで明らかだ。だが……
 「あのさあ、あんたさっき言ったわよね。<ruby>表現<rp>《</rp><rt>リプリゼンテーション</rt><rp>》</rp></ruby>がなんちゃら、って。あのね。私もできるのよ……」
-「！！　藤白くん、古江さん、引いて！！」
+「――！！　藤白くん、古江さん、引いて！！」
 　そして次の瞬間だった。
 　新田さんの姿が、一瞬にして消えた。
 「なっ……！？」
@@ -96,7 +96,6 @@
 　次に聞こえたのは液体が地面に滴る音。生臭い血の匂いが当たりに充満する。
 「せ、先輩！！」
 　消えたと思った新田さんは、希海の背後に居た。そしてその手に持っていたナイフは希海の脇腹に刺さり、傷口からは赤黒い血がどくりどくりと流れ落ちている。
-「くっ――」
 　新田さんがナイフを抜くと、希海はその場にどさりと崩れ落ちた。人民帽が床に転がり、その柔らかな髪がふわりと地面に散らばる。
 「次は……あなた達よ……」
 「ふ、藤白くん……古江さん……逃げて……」
@@ -137,7 +136,7 @@
 　そして、三度、新田さんが消えた。信号機か何かの明かりが突然現れたり消えたりするかのように、何の前触れもなく突如として、である。そして次の瞬間、
 「左後ろ！」
 　ナイフを持った少女が紀佳の後方に現れ、その姿を確認した藤白が叫んだ。
-　人の刺激に対する反応速度はおよそ0.1秒と言われている。その0.1秒の間に新田さんの凶刃は紀佳の人民服を破り、下に着ていたシャツを切り裂き、その奥の柔肌を捉える。だが――
+　人の刺激に対する反応速度はおよそ０．１秒と言われている。その０．１秒の間に新田さんの凶刃は紀佳の人民服を破り、下に着ていたシャツを切り裂き、その奥の柔肌を捉える。だが――
 「はっ！」
 　藤白の声を聞いた紀佳が、目にも留まらぬ速度で掌底を繰り出した。その反応速度は常人よりオーダーが一つほど下である。
 　ズンッ、という音が静かにこだました。紀佳の手のひらが、新田さんの<ruby>鳩尾<rp>《</rp><rt>みぞおち</rt><rp>》</rp></ruby>に直撃したのだ。
@@ -146,7 +145,7 @@
 「捕まえ……たっ！」
 　そう言って、純白のキャンバスを左手で貫いた。
 　ガラスが砕けるような音。
-　精神空間の核が壊れた。同時に空間が歪み、机や椅子がはちゃめちゃな方向に落ちはじめる。
+　精神空間の支柱が壊れた。同時に空間が歪み、机や椅子がはちゃめちゃな方向に落ちはじめる。
 「せ、先輩！」
 　藤白は大急ぎで希海の元へ駆け寄ってその肩を抱き起こした。思ってた以上にほっそりとした身体は苦しそうな呼吸で不規則に上下している。
 「先輩！　先輩！」
