--- a/metastable3/2-04.html
+++ b/metastable3/2-04.html
@@ -65,12 +65,12 @@
 「ああ、患者がどうかしたか」
 「彼女……これからどうなるんでしょうか」
 「これから彼女はカウンセラーによる治療を受けることになっている。一週間ほど学校を休んで、それからまたクラスに復帰する段取りだろう。だが」
-　津雲は少しだけ気まずそうな顔で三人を見渡す。
+　津雲は少しだけ気まずそうな顔で三人を見渡し、
 「お前らの聞きたいのは、そういうことじゃないんだろうな……」
 　はぁ、と溜息をつき、短髪をかきむしる津雲。
 「彼女がこれからどうするかは、彼女と家族の問題だ。そればっかりは俺にも、お前らにも口は出せん。彼女が立ち直るのを信じて待つしかない」
 　今さっき希海から聞いたことを繰り返され、藤白は少しだけ落胆した。
-　そうだよな。これは彼女の問題であって、自分たちにできることはないのかも知れない。そう自らに言い聞かせ、明るく「わかりました」と津雲に返す。
+　そうだ。これは彼女の問題であって、自分たちにできることはないのかも知れない。そう自らに言い聞かせ、明るく「わかりました」と津雲に返す。
 「まあ、そういうことだ。少し経ったら彼女もまたお前らの学校に戻ってくることになるだろうから、そのときは暖かく迎えてやってくれ。それがお前らにできる唯一のことだ。じゃあ俺は執務室に戻っとくから」
 　そう言って扉を閉めた津雲を見送り、三人は着替えを済ませた。その後津雲の執務室で宣言通り茶菓子をご馳走になり、少しばかりの雑談をして、帰ることにした。
 「うわ、もうこんな暗いのか」
@@ -106,20 +106,22 @@
 　そうして歩き出す藤白と紀佳。
 　さっきまで淡く光っていた夕暮れの空はすでに夜のそれに様変わりしてしまっており、二人の歩くニュータウンも薄暗い。足早に自らの家に帰ろうとするサラリーマンや、ヘッドライトを明るく点灯させた車がひっきりなしに街を往来する様は昼の情景と少し異なっており、見知った街のめったに見ない表情のようだった。
 　ふと、つい一ヶ月前のことを思い出してみる。
-　はじめて精神医療センターに行った日のこと。希海と一緒に帰った帰り道。　あのときもこんな薄暗い街を二人で歩いた。初めて出会ったばかりだったから、何を喋ればいいかよく分からなかったけれど、それでも必死に会話をしたことを覚えている。そういえば先輩は……
+　はじめて精神医療センターに行った日のこと。希海と一緒に帰った帰り道。　あのときもこんな薄暗い街を二人で歩いた。初めて出会ったばかりだったから、何を喋ればいいかよく分からなかったけれど、それでも必死に会話をしたことを覚えている。
+――初めて会った日。
+　結局あの日は聞けなかった。希海がどうして<ruby>屋上<rp>《</rp><rt>あそこ</rt><rp>》</rp></ruby>に居たのか。そこで何をしていたのか……。何故……泣いていたのか。
 「カズくん」
 「えっ、あっ何？」
 「どうしたの？　何か考え事して」
 「い、いやちょっとな」
 　紀佳の視線が少しだけ痛く感じるが、すぐに頭をぶんぶんと振って意識を今この瞬間に戻す。
 「新田さん、ホントにどうなるんだろうね……」
-　新田さん。一週間もすればまた学校に復帰してくると津雲は言っていた。だが、そのとき自分はどういう対応を取ればいいのだろう。希海の紀佳はクラスどころか学年が違うのだからあまり気にしなくていいのかもしれないが、同じクラスの、しかも座席が隣の自分にとっては重大な問題だ。沈痛な面持ちで迎え入れてやるべきか、それとも何事も無かったかのように笑顔で振る舞うべきか。
+　一週間もすればまた学校に復帰してくると津雲は言っていた。だが、そのとき自分はどういう対応を取ればいいのだろう。希海の紀佳はクラスどころか学年が違うのだからあまり気にしなくていいのかもしれないが、同じクラスの、しかも座席が隣の自分にとっては重大な問題だ。沈痛な面持ちで迎え入れてやるべきか、それとも何事も無かったかのように笑顔で振る舞うべきか。
 「考えても仕方ない……のかもしれないね」
 　紀佳がぽつりとこぼす。考えても仕方ない。確かにそうだ。自分はできることをやったし、彼女がクラスに復帰した時のことなど、その時になってみなければ分からない。でも……
 「カズくん。あまり考えすぎちゃダメだよ」
 　そんな藤白の思考を読んだかのごとく、紀佳が言った。
 「カズくんが優しいのは知ってるけど、私達、これから色んな人の治療をやっていくんだよ？　その一人ひとりにそこまで思いつめてたら身がもたない」
-　これから色んな人の治療を……。その言葉が藤白に少しだけ重くのしかかる。確かにそうだ。紀佳の言わんとしていることは正しい。これから自分は何人もの人間を治療していくのだ。そのたびにああだこうだと思い悩んでいたらキリがない。ドライになることも時には必要なのかも知れないと藤白は思った。
+　これから色んな人の治療を……。その言葉が藤白に少しだけ重くのしかかる。確かにそうだ。紀佳の言わんとしていることは正しい。これから自分は何人もの人間を治療していくのだ。そのたびにああだこうだと思い悩んでいたらキリがないし、ドライになることも時には必要なのかも知れない。藤白はそう気持ちを切り替えることにした。
 「ああ、そうだな……。サンキュ」
 「うん」
 　そうして藤白と紀佳はお互いの団地の前に着いた。二人の住む団地はそれぞれが大通りを挟んで向い合って建てられている。横断歩道の前で「じゃあ」と手を振って別れ、藤白は自らの家に向かった。
