--- a/metastable3/2-05.html
+++ b/metastable3/2-05.html
@@ -15,13 +15,13 @@
 <div class="text">
 　次の週の頭には定期テストがあった。
 　藤白いつもどおり良くも悪くもなく。希海はいつもどおり好調。紀佳はいつもどおり惨敗だったらしい。結局あの勉強会の意義はあったのかどうか疑わしいところだが、まあアレは勉強会の名を騙った懇親会のようなものなので別に気にすることではないだろう。
-　テスト最終日はちょうど水曜で精神医療センターの活動が休みだったこともあり、三人でカラオケに行った。歌をうたうときには途端にアニメ声になる紀佳は知っていたからいいとして、希海が実は歌が下手だったのが意外だった。藤白の歌い方が漁師みたいだって言われて笑われてたのをよく覚えている。
+　テスト最終日はちょうど精神医療センターの活動が休みだったこともあり、三人でカラオケに行った。歌をうたうときには途端にアニメ声になる紀佳は知っていたからいいとして、希海が実は歌が下手だったのが意外だった。藤白の歌い方が漁師みたいだって言われて笑われてたのをよく覚えている。
 　なんだかんだで楽しかったテストも終わり、そしてその次の日。
 　いつものように引き戸を開けて教室に入った藤白の目に、ある人物が飛び込んできた。
 　その少し長めの黒い髪をした知的そうな人物は、うつむきがちに自分の椅子に座り、少しだけ周囲の状況を伺うようにしている。
 　新田さんだった。
 　そういえばもうあれから一週間か。藤白は教室に入ったそのままの状態で固まってしまう。
-　何と言って声を掛けよう。大変だったね、と沈痛そうな面持ちで声を掛けるべきなのか。何事も無かったかのように、おはようと言うべきか。それともいっそ何も言わずに無視するという手もある。そして藤白が選んだのは……。
+　何と言って声を掛けよう。大変だったね、と重苦しい面持ちで声を掛けるべきなのか。何事も無かったかのようにおはようと言うべきか。それともいっそ何も言わずに無視するという手もある。そして藤白が選んだのは……。
 「お、おはよう。新田さん」
 　自分でもぎこちない笑顔になってしまったと思う。だが藤白は『ままよ』と気を取り直して、人民帽を机の脇に掛けると、いつもどおりドンと自分の席に腰掛けた。
 「あっ……ふ、藤白君……。お、おはよう……」
@@ -30,7 +30,6 @@
 「…………」
 「…………」
 　始業前の教室のざわめきが二人の沈黙を包み込む。藤白はどうすればいいか分からず、隣のうつむいたままの少女をちらりと伺ってみる。すらっとした鼻筋とつぶらな瞳。この顔が、つい一週間前には殺意と諦念に満ち満ちていた。そんな事実に実感がわかないくらい、今の新田さんの表情は静かだった。
-　諦念。
 　両親に進路を決められ、自分のしたいこともできない新田さん。そんな新田さんに、自分は一体何をしてやれただろうか。自分のしたことと言えば、彼女を無理矢理に現実に連れ戻しただけ。そう、現実だ。彼女はまたこれからも同じようにやりたくない勉強を忠実にこなし、自分で選んだわけでもない人生を歩まねばならないのかも知れない。そんな彼女に自分は……
 　藤白は自分の不甲斐なさに腹が立ってきた。確かにこれは他人の家庭の問題だ。だが自分も彼女の人生に影響を与えてしまったのだ。彼女を無理やり連れ戻すということでもってして。だから――
 「新田さん！」
@@ -53,7 +52,7 @@
 「もう！　そんなんじゃいつまでたっても決められないよ！」
 　あははという笑い声が教室に小さく響いた。
 　ただ単に結果として上手く行っただけかもしれない。新田さんの親にたまたま理解があったからこそ官女はこうして笑えているだけかもしれない。
- だが、それでもいいじゃないか。
+　だが、それでもいいじゃないか。
 　新田さんの笑顔にはそう思えるだけの暖かさがあった。
 
 </div>
