--- a/metastable3/2-01.html
+++ b/metastable3/2-01.html
@@ -12,10 +12,10 @@
 <body id="page">
   <div v-component="metastable-page-header"></div>
 
-  <div class="contents">
-  
+<div class="contents">
+
 <div class="logo hpft-sect1-logo">
-  
+      <img src="../img/ms3_section2.png">
 </div>
 
 <div class="text">
