--- a/metastable3/2-02.html
+++ b/metastable3/2-02.html
@@ -118,7 +118,7 @@
 「２－６ってことか」
 「そういうこと。じゃ、いきましょっか」
 　そうして三人は教室を出て学校の廊下を歩き出す。窓の外にあるのは五月の晴れた空。中央地区センターのタワーマンションがはっきり見えるほどに澄み切った空気と、温かい太陽の光がまさに五月の空といった感じだ。
-「いい天気ね」
+「いい天気」
 　そうこぼしたのは紀佳。
 「ああ、こうして学校の中を歩いていてもここが他人の精神の中だなんてにわかには信じられないよ」
 　どこまでも続くひと気のない廊下を歩く三人。こうして歩いていると、今にも外から日常の喧騒が響いてきそうな気がしてならない。ほら、実際にこうしていると、体育の授業で使われる笛の音が規則正しく……
@@ -127,7 +127,7 @@
 「い、いや！　だってほら外！　外から体育の授業の音が……！！」
 「落ち着いて藤白くん。これは普通のことなの」
 「そ、そうなのか？」
-「そうよ。精神空間では遠くの音が背景音として再生されることが非常に多いの。私がルーミングしてきた他の患者でもよくあったわ」
+「そうよ。精神空間では遠くの音が<ruby>背景音<rp>《</rp><rt>ＢＧＮ</rt><rp>》</rp></ruby>として再生されることが非常に多いの。私がルーミングしてきた他の患者でもよくあったわ」
 「そ、そうか。だったらいいんだけど……」
 「カズくん、ビビりすぎ」
 「……っと、そんな雑談はここまでよ」
@@ -140,10 +140,10 @@
 「私たちが学校に出てきたってことは、探している患者が学校にいるってことは間違いないのよね。だったら……」
 「別のクラスとか？」
 「もしくは特別教室ね」
-「特別教室……美術室とか？」と紀佳
+「……美術室とか？」と紀佳
 「なんでまた？」
 　希海が訝しむような目で返す。
-「だって趣味が絵を描くことだったから、なんとなく……」
+「だって趣味が絵を描くことだったから、なんとなく」
 「患者の子って部活入ってたっけ？」
 　そう言って二人はクラスメイトである藤白の方に視線を向ける。
 「いや、覚えてないなあ……」
