--- a/metastable3/2-03.html
+++ b/metastable3/2-03.html
@@ -62,14 +62,13 @@
 「あなたが刃物を武器にする以上、絶対に勝ち目はないってこと」
 「う……うう……」
 　自身に向けられた刃に恐れをなしたのか、それとも絶対に勝てないことを悟ったからか。新田さんは目に涙を浮かべてその場にぺたんと座り込んでしまう。
-　戦意の喪失を確認した希海はナイフを地面に下ろすとこちらを振り返り、藤白と紀佳に視線を向ける。『もう入ってきていいよ』という合図だった。
+　戦意の喪失を確認した希海はナイフをカランと地面に落とすととこちらを振り返り、藤白と紀佳に視線を向ける。『もう入ってきていいよ』という合図だった。
 「新田さん……」
 「ふ、藤白……くん？」
 　藤白を見上げる少女の瞳には、うっすらと涙が浮かんでいる。その涙が、いつか屋上で見た別の少女を藤白に思い出させた。
 「…………」
 　胸が締め付けられる。
 「なあ、どうして新田さんは帰りたくないんだ？」
-「…………」
 　少女は答えない。
 「いや、なんとなくは俺には分かるよ。親に進路を強制されてさ、やりたくもない勉強のプレッシャーに押しつぶされそうになってるんだろ。違う……かな？」
 　藤白のその言葉に、新田さんの肩がびくりと震える。
