--- a/metastable3/2-04.html
+++ b/metastable3/2-04.html
@@ -89,9 +89,9 @@
 「どうした先輩？　何か言い残したことでもあるのか？」
 「そ、その……。今日はごめんね。格好わるいところ見せちゃって。私が二人を教える立場なのに」
 　そう言って希海は少しだけ視線を下にそらす。
-　なんだそんなことかと藤白は思った。そんなことを気にしていた希海が少しだけ可愛らしい。
+　なんだ、と藤白は思った。そんなことを気にしていた希海が少しだけ可愛らしい。
 「まあ、気にすんなよ先輩。なんとかなったんだし、それに実践形式で俺も勉強になったよ」
-「そうそう。勉強と言えば、テスト勉強の方もお世話になっちゃったしね。青山さんには一日中お世話になりっぱなしだったよ」
+「勉強と言えば、テスト勉強の方でもお世話になっちゃったしね。青山さんには一日中教えられっぱなしだった」
 「それに先輩が強いのはこの間の訓練でよく分かってるんだしさ。今日はちょっと運河悪かっただけだって」
 　藤白と紀佳の言葉に希海はパッと顔を上げる。
 「ホ、ホント？」
@@ -106,7 +106,7 @@
 　そうして歩き出す藤白と紀佳。
 　さっきまで淡く光っていた夕暮れの空はすでに夜のそれに様変わりしてしまっており、二人の歩くニュータウンも薄暗い。足早に自らの家に帰ろうとするサラリーマンや、ヘッドライトを明るく点灯させた車がひっきりなしに街を往来する様は昼の情景と少し異なっており、見知った街のめったに見ない表情のようだった。
 　ふと、つい一ヶ月前のことを思い出してみる。
-　はじめて精神医療センターに行った日のこと。希海と一緒に帰った帰り道。　あのときもこんな薄暗い街を二人で歩いた。初めて出会ったばかりだったから、何を喋ればいいかよく分からなかったけれど、それでも必死に会話をしたことを覚えている。
+　はじめて精神医療センターに行った日のこと。希海と一緒に帰った帰り道。あのときもこんな薄暗い街を二人で歩いた。初めて出会ったばかりだったから、何を喋ればいいかよく分からなかったけれど、それでも必死に会話をしたことを覚えている。
 ――初めて会った日。
 　結局あの日は聞けなかった。希海がどうして<ruby>屋上<rp>《</rp><rt>あそこ</rt><rp>》</rp></ruby>に居たのか。そこで何をしていたのか……。何故……泣いていたのか。
 「カズくん」
@@ -117,15 +117,15 @@
 「新田さん、ホントにどうなるんだろうね……」
 　一週間もすればまた学校に復帰してくると津雲は言っていた。だが、そのとき自分はどういう対応を取ればいいのだろう。希海の紀佳はクラスどころか学年が違うのだからあまり気にしなくていいのかもしれないが、同じクラスの、しかも座席が隣の自分にとっては重大な問題だ。沈痛な面持ちで迎え入れてやるべきか、それとも何事も無かったかのように笑顔で振る舞うべきか。
 「考えても仕方ない……のかもしれないね」
-　紀佳がぽつりとこぼす。考えても仕方ない。確かにそうだ。自分はできることをやったし、彼女がクラスに復帰した時のことなど、その時になってみなければ分からない。でも……
+　紀佳がぽつりとこぼす。考えても仕方ない。確かにそうだ。自分はできることをやったし、彼女がクラスに復帰した時のことなど、その時になってみなければ分からない。でも、本当にそれでいいのだろうか？　俺は――
 「カズくん。あまり考えすぎちゃダメだよ」
 　そんな藤白の思考を読んだかのごとく、紀佳が言った。
 「カズくんが優しいのは知ってるけど、私達、これから色んな人の治療をやっていくんだよ？　その一人ひとりにそこまで思いつめてたら身がもたない」
-　これから色んな人の治療を……。その言葉が藤白に少しだけ重くのしかかる。確かにそうだ。紀佳の言わんとしていることは正しい。これから自分は何人もの人間を治療していくのだ。そのたびにああだこうだと思い悩んでいたらキリがないし、ドライになることも時には必要なのかも知れない。藤白はそう気持ちを切り替えることにした。
+　これから色んな人の治療を……。その言葉が藤白に少しだけ重くのしかかる。確かにそうだ。紀佳の言わんとしていることは正しい。これから自分は何人もの人間を治療していくのだ。そのたびにああだこうだと思い悩んでいたらキリがないし、ドライになることも時には必要なのかも知れない。
 「ああ、そうだな……。サンキュ」
 「うん」
 　そうして藤白と紀佳はお互いの団地の前に着いた。二人の住む団地はそれぞれが大通りを挟んで向い合って建てられている。横断歩道の前で「じゃあ」と手を振って別れ、藤白は自らの家に向かった。
-　自宅の扉を開けると、母親が出迎えてくる。
+　団地の中を一人で歩き、自宅の扉を開けると母親が出迎えてくる。
 「遅かったわね。例の精神医療センターの活動？」
 「ああ。ちょっと長びいちゃってさ。これからたまにこういう時間になるときがあるかも」
 「こんな遅くなるのはあまり関心しないわね。まあでも、それで受験に有利になるなら仕方ないわ」
