--- a/metastable3/2-01.html
+++ b/metastable3/2-01.html
@@ -43,7 +43,7 @@
 　黒板に踊る数式はまるで呪文か何かのようで、じっと見ていると頭がぐるぐると回ってくる。
 （それにしても紀佳のヤツ、よくこれをこなしたな……）
 　そんな数式を見ていると浮かんできたのは幼馴染の顔だった。
-　紀佳は、数学……というか勉強全般が大の苦手で、ひとつ下の藤白が勉強を教えることもあるくらいである。とは言っても、教えれることなど一年や二年の復習くらいで、三年生の範囲など分かるはずもないのだが。
+　紀佳は、数学……というか勉強全般が大の苦手で、ひとつ下の藤白が教えることもあるくらいである。とは言っても、教えれることなど一年や二年の復習くらいで、三年生の範囲など分かるはずもないのだが。
 （…………）
 　ちらりと左隣を伺うと、そこには真剣な顔で授業を聞いている新田さんの姿があった。教師が話をするときは真剣にそちらに表情をやり、黒板を写すときにはすらすらと滑らかな手つきでノートに数式を記入していく。
 （そういえば……）
@@ -59,7 +59,7 @@
 （って、何考えてんだ俺は）
 　勉強するのに親が居るか否かは関係ないだろう。頭をぶんぶんと振って、授業に戻ろうとするも、頭にはまだ勉強会のことがこびりついている。
 （ちょっと誘ってみよっかな。でもどうやって切り出そうか……。うーむ……）
-　そんなことを考えていると授業はあっという間に終わってしまう。五眼が終了して、六眼が終了してもまだ、藤白の頭には希海を勉強会に誘うことで一杯だ。
+　そんなことを考えていると授業はあっという間に終わってしまう。五眼が終了して、六限が終了してもまだ、藤白の頭には希海を勉強会に誘うことで一杯だ。
 　そしてホームルームが終わり、学校が終わる。
 　藤白は身支度を整えると、学校指定のブラウンのメッセンジャーバッグを担ぎ、机の横に掛けていた人民帽を被って教室の外に出た。目指すは希海の居る３－６の教室。廊下の人混みを早足で切り抜け、階段をひとつのぼって三階へ上がる。廊下を少し歩いて目的の教室の前に来ると、ちょうどホームルームが終わったばかりのようだった。
 （えっと……先輩は……っと）
@@ -118,7 +118,7 @@
 　紀佳が振り返る。
 「紀佳がいつもやってるようなことだ。俺の部屋を勝手に漁ったり、引き出しやクローゼットを勝手に開けたり、絶っっっ対にするなよ……！」
 　そう厳命する藤白の顔は真剣そのものだが、対する紀佳はヘラヘラとしている。
-「大丈夫大丈夫。青山さんがいるのにそんなことするわけないでしょ」
+「だいじょうぶだいじょうぶ。青山さんがいるのにそんなことするわけないでしょ」
 「ホントかよ……。じゃあちょっと席を空けるけど、絶対だぞ。余計なことするなよ？」
 「うん」
 　そして藤白は自室を後にする。洋楽アーティストのポスターが貼られた扉をくぐり、ノブに手を掛けギィとそれを閉める。
@@ -142,13 +142,13 @@
 「は、はい、って！？」
 「一緒に読もうよ。興味あるでしょ？」
 「で、でも……！」
-「まあそう固いこと言わず、ほら、オープン！」
+「まあそう固いこと言わず、はい、ご開帳」
 　紀佳が本を開けると、そこにはカラーで印刷された生々しい女性の裸体があった。
 「う……」
-「へぇ～、カズくん、こういうのが好みなんだあ」
+「へぇ、カズくん、こういうのが好みなんだあ」
 「だ、ダメだって、古江さん」
 　そう制止してみた希海だったが、その実、興味が無いと言えば嘘になる。最初こそ藤白への義理から目を背けていた希海だったが、パラパラと紀佳がページをめくるたびに、顔も体型も異なる色々な女性が目に飛び込んでくるたびに、そんな考えはじわじわと薄れていってしまう。
-「おっ、このページ、開いた跡が付いてるな。お気に入りなのか……」
+「おっ、このページ、開いた跡が付いてるな。お気に入りなのか」
 　藤白くんのお気に入り……。
 「え、ど、どれ？」
 「ほらこれ。なんとなく青山さんに似てない？」
@@ -159,12 +159,12 @@
 「な、ななななななななななな！！！」
 　藤白だった。
 「ふ、藤白くん！　違うのこれは！」
-「いや～、青山さんがエロ本探そうって言うからあ……」
+「青山さんがエロ本探そうって言うから」
 「！？　ち、違う！　そうじゃなくって……！　私じゃなくって古江さんが……！」
 　もはや頭の中はごっちゃごちゃだった。色々なものが視界に入ってくるがそのどれもが無意味なノイズか何かに思えてくる。
 　綺麗に片付けられた部屋、自分が手に持っている一冊の本、女性の裸体、自分に似てる女性の裸体、真っ赤になったまま固まっている藤白の顔。この上なく楽しそうにニヤニヤしてる紀佳の顔――
 「って、何笑っとんじゃい！！」
-　楽しそうな紀佳の表情に、思わず持っていた本を投げてみたものの、コントロールが狂って藤白の顔面に向かって飛んでいってしまう。
+　楽しそうな紀佳の表情に思わず持っていた本を投げてみたものの、コントロールが狂って藤白の顔面に向かって飛んでいってしまう。
 「ふげっ！！」
 　ばちーん！　という強烈な音。
 「あっ…………」
@@ -173,7 +173,7 @@
 「ご、ごめん、本当にごめん藤白くん！！」
 「い、いや、いいって。先輩は悪くないんだし……」
 　赤くなった鼻の頭をさすりながら藤白は言う。
-「そうだよ。青山さんは悪くないよ」
+「うん。青山さんは悪くない」
 「お前、もう喋るな」
 　そんな馬鹿みたいなやりとりを数分ほど繰り返した後、藤白たちは本題の勉強を始めることにした。
 「…………」
@@ -181,7 +181,7 @@
 　カリカリ、と静かにペンを走らせる音が室内に響く。先程までの騒がしさが嘘のようだった。
 「えーっと、だからね藤白くん。ここの両辺を予めcosθで割っておくと計算が簡単になって……」
 　希海の学力はどうやら順位に違わないものだったらしく、藤白は希海に色々と頼る結果になっていた。
-「青山さ～ん。ここ教えて～」
+「青山さん。ここ教えて」
 「紀佳……お前、少しは考えてから聞けよ……」
 　一方の紀佳はちょっと問題とにらめっこしては希海に質問をし、また問題を見ては希海に頼る始末。三人の学力の差が如実に現れた勉強会と言えた。
 「ていうか先輩、そんな教えてばっかりで自分の勉強大丈夫なのか？」
