--- a/metastable3/2-04.html
+++ b/metastable3/2-04.html
@@ -130,7 +130,7 @@
 「ああ。ちょっと長びいちゃってさ。これからたまにこういう時間になるときがあるかも」
 「こんな遅くなるのはあまり関心しないわね。まあでも、それで受験に有利になるなら仕方ないわ」
 「受験の材料にならなかったら許可してくれなかったのかよ……」
-　そう言って藤白は苦笑する。何だかんだで自分は良い親を持ったと思う。自分はそこまで勉強が得意なわけではないが、テストの点にいちいち細々したことを言われるわけでもなければ、生まれてから今日まで割りと自由にさせてもらえてたと思う。そしてそれはこれからの進路についても同じだ。どこの大学へ行けだとか、何の職業に就けだとか、そういうことを一切言わない親なのだ。
+　そう言って藤白は苦笑する。何だかんだで自分は良い親を持ったと思う。自分はそこまで勉強が得意なわけではないが、テストの点にいちいち細々したことを言われるわけでもなければ、生まれてから今日までわりと自由にさせてもらえてたと思う。そしてそれはこれからの進路についても同じだ。どこの大学へ行けだとか、何の職業に就けだとか、そういうことを一切言わない親なのだ。
 「俺って恵まれてるんだなあ……」
 「何よ突然。ほら。さっさとお風呂はいっちゃいなさい」
 「わかったわかった」
