メタステバナーを作成

--- a/link.html
+++ b/link.html
@@ -158,9 +158,14 @@
   <table class="link">
     <tbody>
       <tr>
-        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_banner.png"></a></td>
-        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner2.png"></a></td>
-        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner3.png"></a></td>
+        <td class="banner"><a href="../" target="_blank"><img src="banner/mayuragicenter_banner.png" style="border:none;"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner2.png" style="border:none;"></a></td>
+        <td class="banner"><a href="hardproblem" target="_blank"><img src="banner/hardproblem_banner3.png" style="border:none;"></a></td>
+      </tr>
+      <tr>
+        <td class="banner"><a href="metastable3" target="_blank"><img src="banner/metastable3_banner1.png" style="border:none;"></a></td>
+        <td class="banner"><a href="metastable3" target="_blank"><img src="banner/metastable3_banner2.png" style="border:none;"></a></td>
+        <td class="banner"><a href="metastable3" target="_blank"><img src="banner/metastable3_banner3.png" style="border:none;"></a></td>
       </tr>
     </tbody>
   </table>
