--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -31,8 +31,8 @@
     <img class="hpft-cover" id="cover" src="../img/title0.png"/>
     <div id="main-hpft-index" v-component="hpft-index"></div>
 
-    <table class="appendix">
-      <tbody class="appendix">
+    <table class="link">
+      <tbody class="link">
         <tr>
          <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
          <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
