firefoxのレイアウト崩れを修正(by pasberth)

--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -31,8 +31,8 @@
     <img class="metastable-cover" id="cover" src="../img/ms3_title0.png"/>
     <div id="main-metastable-index" v-component="metastable-index"></div>
     
-    <table class="appendix">
-      <tbody class="appendix">
+    <table class="link">
+      <tbody class="link">
         <tr>
          <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
          <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
