--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -34,16 +34,14 @@
     <table class="link">
       <tbody class="link">
         <tr>
-         <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
+         <td><a href="https://minamichihaya.github.io/" target="_blank"><img src="../img/mayuragicenter_banner.png"></a></td>
          <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
-         <td><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
+         <td><a href="http://ncode.syosetu.com/n9592cf/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
         </tr>
       </tbody>
     </table>
     
   </div>
-
-  <div class="back"><a href="../novel.html#metastable3">戻る</div>
   
 </body>
 </html>
