テーブルをリストに変更

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -31,16 +31,13 @@
     <img class="hpft-cover" id="cover" src="../img/title0.png"/>
     <div id="main-hpft-index" v-component="hpft-index"></div>
 
-    <table class="link">
-      <tbody class="link">
-        <tr>
-         <td><a href="https://minamichihaya.github.io/novel.html#hardproblem"><img src="../img/mayuragicenter_banner.png"></a></td>
-         <td><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></td>
-         <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
-         <td><a href="http://ncode.syosetu.com/n9592cf/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
-        </tr>
-      </tbody>
-    </table>
+<figure class="link">
+<li class="link"><a href="https://minamichihaya.github.io/novel.html#hardproblem"><img src="../img/mayuragicenter_banner.png"></a></li>
+<li class="link"><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></li>
+<li class="link"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></li>
+<li class="link"><a href="http://ncode.syosetu.com/n9592cf/" target="_blank"><img src="../img/banner_narou.gif"></li>
+</figure>
+
 
   </div>
 
