--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -30,19 +30,13 @@
   <div id="main-contents" class="contents">
     <img class="metastable-cover" id="cover" src="../img/ms3_title0.png"/>
     <div id="main-metastable-index" v-component="metastable-index"></div>
-    
-    <table class="link">
-      <tbody class="link">
-        <tr>
-         <td><a href="https://minamichihaya.github.io/novel.html#metastable3"><img src="../img/mayuragicenter_banner.png"></a></td>
-         <td><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></a></td>
-         <td><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></a></td>
-        </tr>
-      </tbody>
-    </table>
-    
-  </div>
-  
+
+      <figure class="link">
+        <li class="link"><a href="https://minamichihaya.github.io/novel.html#metastable3"><img src="../img/mayuragicenter_banner.png"></a></a></li>
+        <li class="link"><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></li>
+        <li class="link"><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></li>
+      </figure>
+
 </body>
 </html>
 
