--- a/metastable3/index.html
+++ b/metastable3/index.html
@@ -33,7 +33,7 @@
 
       <figure class="link">
         <li class="link"><a href="https://minamichihaya.github.io/novel.html#metastable3"><img src="../img/mayuragicenter_banner.png"></a></a></li>
-        <li class="link"><a href="https://minamichihaya.booth.pm/" target="_blank"><img src="../img/hpft_bs.png"></a></li>
+        <li class="link"><a href="http://dark-constexpr.github.io/" target="_blank"><img src="../img/dark-constexpr-bunner.gif"></li>
         <li class="link"><a href="http://ncode.syosetu.com/n8317cw/" target="_blank"><img src="../img/banner_narou.gif"></li>
       </figure>
 
