スマホ版にタイトル画面出すテスト

--- a/hardproblem/index.html
+++ b/hardproblem/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" type="text/css" href="portrait.css" />
   <link rel="stylesheet" type="text/css" href="landscape.css" />
   <title>ふたりのハードプロブレム</title>
-  <link rel="shortcut icon" href="../img/icon_hardproblem.png" type="image/png">
+  <link id="p-cover" rel="shortcut icon" href="../img/title0.png" type="image/png">
 </head>
 <body id="page" class="index">
   <div v-component="hpft-main-header"></div>
