細かい修正

--- a/metastable3/3-06.html
+++ b/metastable3/3-06.html
@@ -92,7 +92,7 @@
 「私も私も」
 　紀佳もそう言って会話に入ってくる。
 「そ、そんなことないって。ちょっと人より得意なことがあったから、ってだけだよ。藤白くんや古江さんだっていつか……」
-　いつか。だがそんないつかがいつ訪れるのだろうか。それは誰にも分からない。だが、
+　いつか。だがそんないつかがいつ訪れるのだろうか。それは誰にも分からない。けれど、
 「まあな。そんないつかが来てくる日を願ってるよ」
 　だが、今はこの状況を、希海と過ごせる怠惰な日常を楽しもう。そう思う藤白だった。
 </div>
