ページにバナーを追加

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
   <div class="logo">
-    <img src="img/sitelogo.jpg" alt="真揺中心ロゴ">
+    <img src="img/top.png" class="topbanner">
   </div>
 
   <table class="top">
@@ -22,18 +22,16 @@
         <td><a href="novel.html">ライトなノベル</a></td>
         <td><a href="picture.html">ヘタレ絵</a></td>
       	<td><a href="music.html">MIDI遊び</a></td>
+        <td><a href="https://minamichihaya.booth.pm/" target="_blank">通販</a></td>
       </tr>
       <tr>
       	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
-        <td><a href="https://minamichihaya.booth.pm/" target="_blank">通販</a></td>
         <td><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></td>
-      </tr>
-      <tr>
         <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
         <td><a href="https://github.com/minamichihaya" target="_blank">Github</a></td>
-        <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
       </tr>
       <tr>
+        <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
         <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
         <td><a href="event.html">イベント</a></td>
         <td><a href="link.html">リンク</a></td>
@@ -49,6 +47,7 @@
     販売しますのでどうぞよろしくお願いします。<br>
     カタログは<a href="https://c.bunfree.net/c/tokyo21" target="_blank">コチラ</a>。
   </div>
+
   
 </body>
 </html>
