--- a/music.html
+++ b/music.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="logo">
-    <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <img src="img/music.png" class="musicbanner">
   </div>
   
   <div class="music_text">
