--- a/link.html
+++ b/link.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="logo">
-    <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <img src="img/link.png" class="linkbanner">
   </div>
   
   
