--- a/picture.html
+++ b/picture.html
@@ -10,7 +10,7 @@
 <body>
 
   <div class="logo">
-    <a href="../"><img src="img/sitelogo.jpg" alt="真揺中心ロゴ"></a>
+    <img src="img/picture.png" class="picturebanner">
   </div>
   
   <div class="picture_text">
