メタステのトップ画を一つに統一

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <div class="logo">
     <script type="text/javascript">
       var imglist = new Array(
-        "img/top_ms3_1_1.png",
-        "img/top_ms3_1_2.png",
-        "img/top_hpft_1.png",
-        "img/top_hpft_2.png" );
+        "<a href='metastable3'><img src='img/top_ms3_1.png' class='topbanner'></a>",
+        "<a href='hardproblem'><img src='img/top_hpft_2.png' class='topbanner'></a>",
+        "<a href='hardproblem'><img src='img/top_hpft_1.png' class='topbanner'></a>"
+      );
       var selectnum = Math.floor(Math.random() * imglist.length);
-      var output = "<img src=" + imglist[selectnum] + " class='topbanner'>";
+      var output = imglist[selectnum];
       document.write(output);
     </script>
   </div>
@@ -29,16 +29,16 @@
   <table class="top">
     <tbody>
       <tr>
-        <td><a href="novel.html">ライトなノベル</a></td>
         <td><a href="picture.html">ヘタレ絵</a></td>
-      	<td><a href="music.html">MIDI遊び</a></td>
+        <td><a href="novel.html">ライトなノベル</a></td>
         <td><a href="https://minamichihaya.booth.pm/" target="_blank">通販</a></td>
+      	<td><a href="music.html">MIDI遊び</a></td>
       </tr>
       <tr>
-      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
-        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></td>
-        <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
         <td><a href="https://github.com/minamichihaya" target="_blank">Github</a></td>
+      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
+        <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
+        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></td>
       </tr>
       <tr>
         <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
