--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 
 <body>
 
-
-  <div class="logo">
+  <div class="siteimg">
     <script type="text/javascript">
       var imglist = new Array(
         "<a href='metastable3'><img src='img/top_ms3_1.png' class='topbanner'></a>",
@@ -48,7 +47,8 @@
       </tr>
     </tbody>
   </table>
-
+  
+  
   <div class="information" style="display:none;">
     <div style="font-weight:bold;">11/23(月)　<a href="http://bunfree.net/?tokyo_bun21" target="_blank">第二十一回文学フリマ東京</a>(<a href="https://c.bunfree.net/c/tokyo21/1F/C/64" target="_blank">C-64／暗黒定数式</a>)</div>
     売り子として参加します。<br>
