--- a/index.html
+++ b/index.html
@@ -25,28 +25,21 @@
     </script>
   </div>
   
-  <table class="top">
-    <tbody>
-      <tr>
-        <td><a href="picture.html">ヘタレ絵</a></td>
-        <td><a href="novel.html">ライトなノベル</a></td>
-        <td><a href="https://minamichihaya.booth.pm/" target="_blank">通販</a></td>
-      	<td><a href="music.html">MIDI遊び</a></td>
-      </tr>
-      <tr>
-        <td><a href="https://github.com/minamichihaya" target="_blank">Github</a></td>
-      	<td><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</td>
-        <td><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></td>
-        <td><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></td>
-      </tr>
-      <tr>
-        <td><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></td>
-        <td><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></td>
-        <td><a href="event.html">イベント</a></td>
-        <td><a href="link.html">リンク</a></td>
-      </tr>
-    </tbody>
-  </table>
+
+　　<ul class="top">
+     <li class="top"><a href="picture.html">ヘタレ絵</a></li>
+     <li class="top"><a href="novel.html">ライトなノベル</a></li>
+     <li class="top"><a href="https://minamichihaya.booth.pm/" target="_blank">通販</a></li>
+     <li class="top"><a href="music.html">MIDI遊び</a></li>
+     <li class="top"><a href="https://github.com/minamichihaya" target="_blank">Github</a></li>
+     <li class="top"><a href="http://twitter.com/mayuragicenter" target="_blank">Twitter</li>
+     <li class="top"><a href="http://ask.fm/mayuragicenter" target="_blank">ask.fm</a></li>
+     <li class="top"><a href="http://mypage.syosetu.com/273349/" target="_blank">小説家になろう</a></li>
+     <li class="top"><a href="http://www.amazon.co.jp/registry/wishlist/2JXRC6JN5HL1S" target="_blank">Wishlist</a></li>
+     <li class="top"><a href="http://book.akahoshitakuya.com/u/342349" target="_blank">読書メーター</a></li>
+     <li class="top"><a href="event.html">イベント</a></li>
+     <li class="top"><a href="link.html">リンク</a></li>
+   </ul>
   
   
   <div class="information" style="display:none;">
