--- a/picture.html
+++ b/picture.html
@@ -92,6 +92,7 @@
 
   <ul class=picture>
     <p class=picturecaption>いただきもの</p>
+    <li class="picture"><a href="picture/gift29.html"><img src="thumbnail/tn_gift29.jpg"></a></li>
     <li class="picture"><a href="picture/gift28.html"><img src="thumbnail/tn_gift28.jpg"></a></li>
     <li class="picture"><a href="picture/gift27.html"><img src="thumbnail/tn_gift27.jpg"></a></li>
     <li class="picture"><a href="picture/gift26.html"><img src="thumbnail/tn_gift26.jpg"></a></li>
