スライドショーを豊富に

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
 
     <div class="flexslider">
       <ul class="slides">
+        <li><img src='img/top.png' class='topbanner'></li>
         <li><a href='metastable3'><img src='img/top_ms3_1.png' class='topbanner'></a></li>
         <li><a href='hardproblem'><img src='img/top_hpft_2.png' class='topbanner'></a></li>
-        <li><a href='hardproblem'><img src='img/top_hpft_1.png' class='topbanner'></li>
+        <li><a href='hardproblem'><img src='img/top_hpft_1.png' class='topbanner'></a></li>
+        <li><a href='https://minamichihaya.booth.pm/' target="_blank"><img src='img/top_booth.png' class='topbanner'></a></li>
+        <li><a href='picture.html'><img src='img/top_picture.png' class='topbanner'></a></li>
+        <li><a href='music.html'><img src='img/top_music.png' class='topbanner'></a></li>
+        <li><a href='event.html'><img src='img/top_event.png' class='topbanner'></a></li>
       </ul>
     </div>
 
@@ -56,8 +61,8 @@
       $('.flexslider').flexslider({
         animation: "fade",
         pauseOnAction: false,
-        slideshowSpeed: 10000,
-        animationDuration: 10000,
+        slideshowSpeed: 5000,
+        animationDuration: 5000,
         animationLoop: true,
         mousewheel: true,
         touch: true,
