ロゴ、小さくなって復活

--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 </head>
 
 <body>
-
+  <div class="logo">
+    <img src="img/sitelogo.jpg" alt="真揺中心ロゴ">
+  </div>
 
     <div class="flexslider">
       <ul class="slides">
-        <li><img src='img/top.png' class='topbanner'></li>
         <li><a href='metastable3'><img src='img/top_ms3_1.png' class='topbanner'></a></li>
         <li><a href='hardproblem'><img src='img/top_hpft_2.png' class='topbanner'></a></li>
         <li><a href='hardproblem'><img src='img/top_hpft_1.png' class='topbanner'></a></li>
