公開前推敲

--- a/metastable3/3g-01.html
+++ b/metastable3/3g-01.html
@@ -22,17 +22,17 @@
 　時は６月上旬の某日。晴れの特異日。燦々と照りつける初夏の日差しが運動場を明るく照らしており、舞い上がるグラウンドの土埃の匂いが鼻孔を突いた。
 　運動場に引かれたトラックの上では体操着を着た生徒が我先にと夢中で走っている。ある者がリードをすれば応援席から声援が上がり、また別の者が抜かされれば群衆に動揺の色が広がった。
 『七組リード！　はやいはやい！　このまま一位を奪うのかっ！？』
-　野外に設置されたスピーカーからは放送部の生徒の声が響いている。
+　グラウンドには放送部の生徒の声が響いている。
 　そう今日は体育祭の日。華々しい運動部の連中が勝手に盛り上がり、文化部の日陰者たちが舌打ちをする、一年に一度のイベントである。
 『まもなく次の競技が始まります。出場生徒の皆さんは指定の場所に集まってください』
-　スピーカーから流れるＢＧＭに耳を傾けながら藤白はよし、と気合を入れた。
+　野外に設置されたスピーカーからから流れる高速カントリー風のＢＧＭに耳を傾けながら藤白はよし、と気合を入れた。
 「じゃあちょっと行ってくるぜ」
 　そう言ってハチマキをキュッと締める。
 「じゃあね、藤白くん。がんばって」
 「カズくん、ふぁいとー」
 　希海と紀佳の応援を受け、藤白はスタート地点に赴く。トラックを横切り、地面を踏みしめるたびに心臓が高鳴った。
 『さて、次の競技は障害物競走！　午前最後の種目です！　今度はどんなドラマが待っているんでしょうか！』
-　白い石灰で引かれたスタートラインの前に立つと、全校生徒からの視線がこの一点に集まっているのを感じる藤白だった。
+　白い石灰で引かれたスタートラインの前に立つと、全校生徒からの視線がこの一点に集まっているのを感じる。
 （よし……）
 　やるぞ、と藤白は思う。今までの体育大会はそれなりに適当にやっていたが、今年は希海の目があるのだ。運動が得意な希海の目、である。かっこ悪いところは見せられない。
 「位置について……よーい」
@@ -44,15 +44,15 @@
 『さあ第一の障害、編み網ネット！　ここで一波乱が起こるのでしょうか！』
 　だが、目の前に敷かれた大きな樹脂製のネット。選手はこれを下からくぐって抜けなければならない。体の大きさが不利になる障害だった。
 （うおおおおおっ！！）
-　藤白はスタートダッシュの勢いそのままにネットに頭を突っ込んだ。そして体操着が汚れるのもためらわず|匍匐《ほふく》前進を敢行する。
-　ネットの格子の大きさはちょうど頭が一つ入るくらいの大きなものだ。だがこのサイズが曲者である。頭や腕が簡単に穴に入ってしまい、思うように前へ進むことができない。
+　藤白はスタートダッシュの勢いそのままにネットに頭を突っ込んだ。そして体操着が汚れるのもためらわず<ruby>匍匐<rp>《</rp><rt>ほふく</rt><rp>》</rp></ruby>前進を敢行する。
+　ネットの格子はちょうど頭が一つ入るくらいの大きさだ。だがこのサイズが曲者である。頭や腕が簡単に穴に入ってしまい、思うように前へ進むことができない。
 　もがくようにしてようやく脱出したネット。だが、そんな藤白の目に飛び込んできたものは――
 （げっ、抜かれてる……！）
 　顔を上げてると、別の走者の背中が見えた。ハチマキの色は青色……四組である。目下一位を走っているチーム。ここいらでひとつ勝ち星を上げておきたかった。
 （くそっ……負けるか！）
 　藤白は必死に相手を追いかけた。単なる競争では藤白に分があるのか、その背中が段々と近づいてくる。そしてあと少しで抜き去れる……というところで、
 『さて、次なる障害は“麻袋”です！』
-　麻袋かあ……と藤白は思った。この障害はあまり得意ではないし、そもそもの問題として絵面的にかっこが悪い。できれば避けたい部類のものだったが、まさかコレだけ避けて通るわけにもいかない。藤白は覚悟を決めて麻袋に両足を突っ込んだ。
+　麻袋かあ……と藤白は思った。この障害はあまり得意ではないし、そもそもの問題として絵面的にかっこが悪い。できれば避けたい部類のものだったが、まさかこれだけ避けて通るわけにもいかない。藤白は覚悟を決めて麻袋に両足を突っ込んだ。
 （くう……意外とキツイなコレ……）
 　麻袋に両足を突っ込んでピョンピョンと跳ねる藤白。どうやらライバルもこれは苦手だったようで、藤白との差はそのままだ。
 　その後、スプーンでピンポン球を運び、平均台の上を全力で駆け抜けるが、一行に目的の背中との差は縮まらない。
