--- a/metastable3/3g-02.html
+++ b/metastable3/3g-02.html
@@ -52,7 +52,7 @@
 「人間じゃないって一体――」
 「アンドロイドだよ」
 　反射的に声がした方を向くと、男の子が誇らしげに手の甲を藤白に向けていた。
-「|上海人偶機器人工学《ＳＤＲ》サマリー１７シリーズ第三世代男性型。型番はSUM17M3JP1980、ロットナンバーは093108160801009。嘘だと思うなら兄ちゃんの端末でコレ読み取ってみなよ」
+「<ruby>上海人偶機器人工学<rp>《</rp><rt>ＳＤＲ</rt><rp>》</rp></ruby>サマリー１７シリーズ第三世代男性型。型番はSUM17M3JP1980、ロットナンバーは093108160801009。嘘だと思うなら兄ちゃんの端末でコレ読み取ってみなよ」
 　少年の手の甲には刺青のような刻印が見える。正方形の領域を埋め尽くす無数の市松模様。広告などでよく見かける二次元コードだ。
 「さっき私の端末で読み取ってみたら、この子の言った通りの情報が出てきた。どうやら本当みたい」
 「本当なのか……」
