--- a/metastable3/3g-03.html
+++ b/metastable3/3g-03.html
@@ -23,11 +23,11 @@
 「……カズくん、パス」
 「えっ、お、俺！？　ていうか俺、顕微鏡とか高校入ってから使ってないんだけど！？」
 「あ、そうか。カズくん、生物選択してなかったっけ。じゃあ化学でもいいよ」
-　藤白はしどろもどろになりながら、直近の実験を説明する。とは言っても、実験なんて適当に器具をいじって教師の指示通りレポートを書くだけだ。その内容が一体どんなものなのかは藤白もよく分かっていない。
+　藤白はしどろもどろになりながら、つい数日前にやった実験を説明する。とは言っても、実験なんて適当に器具をいじって教師の指示通りレポートを書くだけだ。その内容が一体どんなものなのかは藤白もよく分かっていない。
 「ああ、なるほど。ボイル・シャルルの法則の確認か。あと気体定数でも求めてるのかな？」
 　だがそんな藤白の説明を受けて、男の子は実験の内容をすんなりと理解してみせる。顎に手を当てて思索を巡らせるその姿は、ずいぶんと大人びて見えた。
 「へぇ、すごいね。高校の勉強も知ってるんだ」
-　紀佳は感心した様子で手を叩く。人間ならば天才小学生とでも呼ばれていたのかもしれないが、この子はアンドロイドだ。知識の習得だってボタンひとつでできるのかもしれない。つい半月ほど前のテスト勉強を思い出して、自分も機械になりたいと思う藤白だった。
+　紀佳は感心した様子で手を叩く。人間ならば天才小学生とでも呼ばれていたのかもしれないが、この子はアンドロイドだ。知識の習得だってボタンひとつでできるのかもしれない。一ヶ月ほど前のテスト勉強を思い出して、自分も機械になりたいと思う藤白だった。
 「あれ藤白？」
 　背後から名前を呼ばれ、反射的に振り返る。一瞬、ロボットを連れて歩いていることがバレたかと思ってどきりとしたが、そこに居たのはよく知ったクラスメイトの姿だった。
 「何やってんだこんな場所で。それにその子……」
