--- a/metastable3/3g-04.html
+++ b/metastable3/3g-04.html
@@ -34,7 +34,7 @@
 「……ちょっと長くてややこしい話になるけどいい？」
 　紀佳がうなずく、藤白もうなずく。
 　望むところだ。興味本位の詮索から始まって、気づけばこんな身の上話になってしまうとは思いもよらなかった。下世話な野次馬根性を出してしまったからには、最後まで付き合うのが筋だと藤白は思う。
-「じゃあ、まずは僕たちアンドロイドの仕組みから聞いてもらおうかな。えっと、僕らの頭には|ＦＩＡＮＣ《ファイアンク》っていうプロセッサが使われてるんだ。ＣＰＵみたいなものだね。ただし、一般的な計算機なんかで使われてるＣＰＵと違ってＦＩＡＮＣはニューラルプロセッサなんだ。ニューラル……つまり人のシナプスや脳神経ネットワークを極限まで模したデバイスというわけ。ここまでは大丈夫？」
+「じゃあ、まずは僕たちアンドロイドの仕組みから聞いてもらおうかな。えっと、僕らの頭には<ruby> ＦＩＡＮＣ<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>っていうプロセッサが使われてるんだ。ＣＰＵみたいなものだね。ただし、一般的な計算機なんかで使われてるＣＰＵと違ってＦＩＡＮＣはニューラルプロセッサなんだ。ニューラル……つまり人のシナプスや脳神経ネットワークを極限まで模したデバイスというわけ。ここまでは大丈夫？」
 　突然始まったロボット工学の説明にたじろいでしまう。ＣＰＵすら上手くイメージが付かないというのに、それより高度なコンピュータの話をされて理解できるとは思えなかった。
 「えーっと……なんだ……その……つまり、そのファイなんとかってヤツは人工的に作った人の脳ってことか？」
 　アキラの言葉を継ぎ合わせながら、何とかそれらしい解答をひねり出す。科学というより、国語の問題を解いているような気分だった。
@@ -157,7 +157,8 @@
 「藤白～！　惜しかったな！」
 「カズくん、よくやった」
 「兄ちゃん、すっごい走るの速いんだな！　見なおしたよ」
-　みんなの笑顔に励まされる。負けたことは悔しいけど、これでも良かったな。そう思った。
+　みんなの笑顔に励まされる。負けたことは悔しいけど、これでも良かったな。
+　そんなことを思う藤白を赤らんだ夕日が照らし出していた。
 </div>
 
     <div id="footer" v-component="metastable-page-footer"></div>
