えっちな絵追加

--- a/picture.html
+++ b/picture.html
@@ -18,7 +18,7 @@
   </div>
   
   <ul>
-    <p class=picturecaption>ヘタレ絵</p>
+    <p class=picturecaption>ヘタレ絵（えっちなのあり）</p>
     <li class="picture"><a href="picture/noel01.html"><img src="thumbnail/tn_noel01.jpg"></a></li>
     <li class="picture"><a href="picture/hardproblem04.html"><img src="thumbnail/tn_hardproblem04.jpg"></a></li>
     <li class="picture"><a href="picture/lushana01.html"><img src="thumbnail/tn_lushana01.jpg"></a></li>
@@ -91,7 +91,8 @@
   </ul>
 
   <ul class=picture>
-    <p class=picturecaption>いただきもの</p>
+    <p class=picturecaption>いただきもの（えっちなのあり）</p>
+    <li class="picture"><a href="picture/gift31.html"><img src="thumbnail/tn_gift31.jpg"></a></li>
     <li class="picture"><a href="picture/gift30.html"><img src="thumbnail/tn_gift30.jpg"></a></li>
     <li class="picture"><a href="picture/gift29.html"><img src="thumbnail/tn_gift29.jpg"></a></li>
     <li class="picture"><a href="picture/gift28.html"><img src="thumbnail/tn_gift28.jpg"></a></li>
