るりさんのサイトを変更

--- a/picture/gift28.html
+++ b/picture/gift28.html
@@ -18,7 +18,7 @@
   </div>
   
   <div class="picturetitle">
-    藤白（かいたひと：<a href="http://www.pixiv.net/member.php?id=11674294" target="_blank">るり</a>さん）
+    藤白（かいたひと：<a href="https://coconala.com/services/100451" target="_blank">るり</a>さん）
   </div>
   
   <div class="caption">
